--- a/cutecats/views/index.handlebars
+++ b/cutecats/views/index.handlebars
@@ -44,6 +44,7 @@
     <div class="panel-body">
         {{#each images}}
             <div class="col-md-4 text-center" style="padding-bottom: 1em;">
+                <span> uploaded on {{ timeago timestamp }}</span>
                 <a href="/images/{{ uniqueId }}">
                     <img src="/public/uploads/{{ filename }}" alt="{{ title }}" style="width: 175px; height: 175px;" class="img-thumbnail"/>
                 </a>
