--- a/cutecats/views/layouts/main.handlebars
+++ b/cutecats/views/layouts/main.handlebars
@@ -28,20 +28,20 @@
             </div>
         </div>
         
-        <div style="border-top: solid 1px #eee, padding-top: 1em;">
+        <div style="border-top: solid 1px #eee; padding-top: 1em;">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <p class="text-muted">cuteCats.io | &copy, Copyright 2016</p>
+                        <p class="text-muted">cuteCats.io | &copy; Copyright 2016</p>
                         <p class="text-center">
-                            <i class="fa fa-twitter-square fa-2x tt-primary"></i>
-                            <i class="fa fa-facebook-square fa-2x tt-primary"></i>
+                            <i class="fa fa-twitter-square fa-2x text-primary"></i>
+                            <i class="fa fa-facebook-square fa-2x text-primary"></i>
                         </p>
                     </div>
                 </div>
             </div>
         </div>
-            
+  
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="/public/js/scripts.js" type="text/javascript"></script>
     </body>
