--- a/cutecats/views/index.handlebars
+++ b/cutecats/views/index.handlebars
@@ -43,7 +43,7 @@
             <div class="col-md-4 text-center" style="padding-bottom: 1em;">
                 <span>uploaded  {{ timeago timestamp }} </span>
                 <a href="/images/{{ uniqueId }}">
-                    <img src="/public/upload/{{ filename }}"
+                    <img src="/public/uploads/{{ filename }}"
                          alt="{{ title }}"
                          style="width: 175px; height: 175px;"
                          class="img-thumbnail" />
