--- a/cutecats/views/layouts/main.handlebars
+++ b/cutecats/views/layouts/main.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <title>cuteCatImg.io</title>
+        <title>UgglyCatImg.io</title>
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"
               rel="stylesheet" />
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"
@@ -24,6 +24,10 @@
                 </div>
                 <div class="col-sm-4">
                     {{> stats this }}
+                    
+                    {{> popular this }}
+                    
+                    {{> newest this }}
                 </div>
             </div>
         </div>
