--- a/cutecats/views/image.handlebars
+++ b/cutecats/views/image.handlebars
@@ -5,7 +5,7 @@
 
 
     <div class="panel-body">
-        <p> {{ image.descript }} </p>
+        <p> {{ image.description }} </p>
         <div class="col-md-12 text-center">
             <img src="/public/uploads/{{ image.filename }}" class="img-thumbnail"/>
         </div>
@@ -26,5 +26,67 @@
     </div>
 </div>
 
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <div class="row">
+            <div class="col-md-8">
+                <strong class="panel-title"> Comments </strong>
+            </div>
+            <div class="col-md-4 text-right">
+                <button class="btn btn-default btn-sm" id="btn-comment" data-id="{{ image.uniqueId }}">
+                    <i class="fa fa-comments-o"> Post Comment ... </i>
+                </button> 
+            </div>
+        </div>
+    </div>
+    <div class="panel-nody">
+        <bockquote id="post-comment">
+            <div class="row">
+                <form method="post" action="/images/{{ image.uniqueId }}/comment">
+                    <div class="form-group col-sm-12">
+                        <label class="col-sm-2 control-label" for="name"> Name:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="name"/>
+                        </div>
+                    </div>
+                    <div class="form-group col-sm-12">
+                        <label class="col-sm-2 control-label" for="email"> Email:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="email"/>
+                        </div>
+                    </div>
+                    <div class="form-group col-sm-12">
+                        <label class="col-sm-2 control-label" for="comment"> Comment:</label>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" rows="2" name="comment"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group col-sm-12">
+                        <div class="col-sm-12 text-right">
+                            <button class="btn btn-success" type="submit button">
+                                <i class="fa fa-comment">Post</i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </bockquote>
+        <ul class="media-list">
+            {{#each comments}}
+            <li class="media">
+                <a class="pull-left" href="#">
+                    <img class="media-object img-circle" src="http://www.gravatar.com/avatar/{{gravatar}}?d=monsterid&s=45"/>
+                </a>
+                <div class="media-body">
+                    {{ comment }}
+                    <br/>
+                    <strong class="medio-heading">{{ name }}</strong>
+                    <small class="text-muted">{{ timeago timestamp }}</small>
+                </div>
+            </li>
+            {{/each}}
+        </ul>
+    </div>
+</div>
 
 
