--- a/cutecats/views/partials/newest.handlebars
+++ b/cutecats/views/partials/newest.handlebars
@@ -1,6 +1,6 @@
 <div class ="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title"> Most Popular Cats </h3>
+        <h3 class="panel-title"> newest comments </h3>
     </div>
     <div class="panel-body">
         {{#each sidebar.newest}}
