--- a/cutecats/views/image.handlebars
+++ b/cutecats/views/image.handlebars
@@ -20,7 +20,11 @@
                 <i class="fa fa-eye"></i>
                 <strong> {{ image.views }} </strong> &nbsp; - &nbsp;
                 Posted: <em class="text-muted"> {{ timeago image timestamp}}</em> 
-                  
+            </div>
+            <div class="col-md-4 text-right">
+                <button class="btn btn-danger" id="btn-delete" data-id="{{image.uniqueId}}">
+                    <i class="fa fa-times"></i>
+                </button>
             </div>
         </div>
     </div>
