--- a/ecommerce/views/layouts/main.handlebars
+++ b/ecommerce/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <p class="text-muted">cuteCats.io | &copy; Copyright 2016</p>
+                        <p class="text-muted">GlobalCommerce.com | &copy; Copyright 2016</p>
                         <p class="text-center">
                             <i class="fa fa-twitter-square fa-2x text-primary"></i>
                             <i class="fa fa-facebook-square fa-2x text-primary"></i>
