--- a/boutiquefutur/views/layouts/main.handlebars
+++ b/boutiquefutur/views/layouts/main.handlebars
@@ -1,26 +1,30 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <title>GlobalCommerce.com</title>
+        <title>cuteCatImg.io</title>
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"
               rel="stylesheet" />
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"
               rel="stylesheet" />
-        <link rel="stylesheet" type="text/css" href="/public/css/styles.css"/>
+        <link rel="stylesheet" type="text/css" href="/public/css/styles.css" />
     </head>
     <body>
         <div class="page-header">
             <div class="container">
                 <div class="col-md-6">
-                    <h1><a href="/">GlobalCommerce.com</a></h1>
+                    <h1><a href="/">FutureShop.io</a></h1>
                 </div>
             </div>
         </div>
         
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-8">
                     {{{body}}}
+                </div>
+                <div class="col-sm-4">
+                    
+                    
                 </div>
             </div>
         </div>
@@ -29,7 +33,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <p class="text-muted">GlobalCommerce.com | &copy; Copyright 2016</p>
+                        <p class="text-muted">futureShop.io | &copy; Copyright 2016</p>
                         <p class="text-center">
                             <i class="fa fa-twitter-square fa-2x text-primary"></i>
                             <i class="fa fa-facebook-square fa-2x text-primary"></i>
